Checkin in incase my laptop dies and never turns back on.

--- a/RoutineCatalogue/RoutineCatalogue.API/appsettings.json
+++ b/RoutineCatalogue/RoutineCatalogue.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Development": "Server=(localdb)\\mssqllocaldb; Database=RoutineCatalogue; Trusted_Connection=True;MultipleActiveResultSets=True;"
   },
+  "ApplicationSettings": {
+    "ApplicationSecret": "CodePaLOUsa2019"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
