Finished Chapter 8 - Fixing Pub Sub bug

--- a/RoutineCatalogue/RoutineCatalogue.API/appsettings.json
+++ b/RoutineCatalogue/RoutineCatalogue.API/appsettings.json
@@ -3,7 +3,8 @@
     "Development": "Server=(localdb)\\mssqllocaldb; Database=RoutineCatalogue; Trusted_Connection=True;MultipleActiveResultSets=True;"
   },
   "ApplicationSettings": {
-    "ApplicationSecret": "CodePaLOUsa2019!"
+    "ApplicationSecret": "CodePaLOUsa2019!",
+    "WorkoutServiceIP": "https://localhost:44362"
   },
   "Logging": {
     "LogLevel": {
