--- a/RoutineCatalogue/RoutineCatalogue.MVC/RoutineCatalogue.MVC.csproj
+++ b/RoutineCatalogue/RoutineCatalogue.MVC/RoutineCatalogue.MVC.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="RestEase" Version="1.4.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
   </ItemGroup>
 
 
