--- a/RoutineCatalogue/RoutineCatalogue.Models/RoutineCatalogue.Models.csproj
+++ b/RoutineCatalogue/RoutineCatalogue.Models/RoutineCatalogue.Models.csproj
@@ -9,6 +9,7 @@
       <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.stores\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
     </Reference>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
